# non-fiction-book-writer

./: .gitignore  README.md  pyproject.toml
books/business-literacy/: config.yaml  rubric.md
src/book_writer/: __init__.py  __main__.py  cli.py  config.py  converter.py  generator.py  models.py  openrouter.py  parser.py  prompts.py  state.py
tests/: __init__.py
